# castle

./: .gitignore  CHANGES.md  README.md  castle.py  mkdocs.yml  pyproject.toml  requirements.txt
castle/: __init__.py  config.py  download.py  feed.py  models.py  repository.py
notebooks/: etag_and_last_modified.ipynb  performance.ipynb  settings.ipynb
pdcst/: __init__.py  models.py
tests/: conftest.py  test_repository.py
