[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "castle"
author = "Jochen Wersdörfer"
author-email = "jochen-castle@wersdoerfer.de"
home-page = "https://github.com/ephes/castle"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires = [
    "httpx >= 0.22",
    "feedparser >= 6",
    "rich >= 11.1.0",
    "pydantic >= 1.9",
    "typer >= 0.4",
]
requires-python = ">=3.9"
# dynamic = ["version", "description"]
# license = {file = "LICENSE"}

[tool.flit.metadata.urls]
Documentation = "https://github.com/ephes/castle"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >= 6",
]
doc = [
    "mkdocs >= 1.2",
]
dev = [
    "jupyterlab >= 3.2.9",
]

[tool.isort]
profile = "black"
known_third_party = ["pydantic", "rich"]

#[project.scripts]
#castle = "castle:cli"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
